--- a/css/How.css
+++ b/css/How.css
@@ -6,13 +6,13 @@
 }
 
 .how__center {
-    width: 1168px;
+    width: 1200px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 60px;
+    padding: 60px 16px 0;
 }
 
 .how__header {
@@ -49,8 +49,9 @@
 
 .how__container {
     display: flex;
-    max-width: 1168px;
+    width: 100%;
     margin: 0 auto;
+    justify-content: space-between;
 }
 
 .how__image {
@@ -90,7 +91,7 @@
     width: 463px;
     display: flex;
     flex-direction: column;
-    margin-left: 100px;
+    align-self: flex-end;
 }
 
 .how__textblock {
