--- a/css/callback.css
+++ b/css/callback.css
@@ -6,25 +6,23 @@
 
 .callback__wrap {
     display: flex;
+    flex: 1;
+    position: relative;
     width: 1200px;
     min-height: 1020px;
-    position: relative;
     margin: 0 auto;
 }
 
 .callback__center {
     display: flex;
-    width: 1013px;
+    max-width: 1013px;
     border-radius: 24px;
     flex-direction: column;
     padding: 0;
-    margin: 0 93.5px;
-    position: absolute;
-    top: -94px;
+    margin: -94px auto 0;
 }
 
 .callback__background {
-    position: absolute;
     background-image: url(../img/prod-fon.svg);
     background-position: center;
     background-repeat: no-repeat;
@@ -32,6 +30,7 @@
     object-fit: contain;
     opacity: 0.6;
     display: flex;
+    position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
@@ -42,13 +41,13 @@
 }
 
 .callback__image {
-    display: block;
+    display: flex;
     box-sizing: border-box;
     border: none;
     width: 100%;
     height: 100%;
     border-radius: 24px;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     object-fit: contain;
     z-index: 5;
@@ -141,14 +140,13 @@
 @media screen and (max-width: 1024px) {
     .callback__wrap {
         width: 768px;
-        min-height: 958px;
+        min-height: 982px;
     }
 
     .callback__center {
-        width: 704px;
-        margin: 0 32px;
+        max-width: 704px;
+        margin: -164px auto 32px;
         border-radius: 18px;
-        top: -164px;
     }
 
     .callback__background {
@@ -156,7 +154,6 @@
     }
 
     .callback__image {
-        width: 704px;
         height: 327px;
         border-radius: 18px;
         object-fit: cover;
@@ -176,18 +173,21 @@
         line-height: 26px;
         padding: 29px 80px;
     }
+
+    .callback__dotes {
+        margin: 0 auto 356px;
+    }
 }
 
 @media screen and (max-width: 767px) {
     .callback__wrap {
         width: 320px;
-        height: 1070px;
+        min-height: 1070px;
     }
 
     .callback__center {
-        width: 279px;
-        margin: 0 16px;
-        top: -24px;
+        max-width: 279px;
+        margin: -24px auto 16px;
     }
 
     .callback__background {
@@ -200,9 +200,9 @@
     }
 
     .callback__image {
-        width: 279px;
-        height: 130px;
         border-radius: 7px;
+        height: 130px;
+        margin: 0;
     }
 
     .callback__photo {
