--- a/css/prod.css
+++ b/css/prod.css
@@ -2,6 +2,7 @@
     background: #fff;
     display: flex;
     width: 100%;
+    margin: 0;
 }
 
 .prod__wrap {
@@ -9,6 +10,7 @@
     width: 1200px;
     position: relative;
     margin: 0 auto;
+    padding: 0;
 }
 
 .prod__background {
@@ -16,11 +18,10 @@
     background-position: center;
     object-fit: contain;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
     opacity: 0.5;
-    width: 100%;
-    height: 100%;
     display: flex;
+    width: 100%;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -31,11 +32,12 @@
 
 .prod__center {
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    padding: 60px 12px 57px;
+    padding: 60px 13px 57px;
     margin: 0 auto;
+    flex: 1;
 }
 
 .prod__header {
@@ -71,15 +73,17 @@
 }
 
 .prod__items {
-    max-width: 1175px;
+    margin: 0 auto;
+    width: 100%;
     list-style: none;
     display: flex;
-    margin: 0 auto;
-    padding: 0;
+    justify-content: space-between;
+    padding: 0 13px;
 }
 
 .prod__item {
-    width: 370px;
+    max-width: 370px;
+    flex: 1;
     margin-right: 32px;
     display: flex;
     flex-direction: column;
@@ -199,6 +203,8 @@
 }
 
 .prod__rectangle {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     border-radius: 24px;
     margin: 183.5px 0 0;
@@ -364,6 +370,11 @@
         max-width: 280px;
         margin: 0 auto 56px;
         min-height: 528px;
+    }
+
+
+    .prod__item:last-child {
+        margin: 0 auto 56px;
     }
 
     .prod__item-img {
